ftp: fix ascii transfers with progress bar

Handle stdio interruption by signals and improve error handling
in getc() and putc() on the control and data channels.
Provide ftp_getc() and ftp_putc() wrappers that:
- Retry the operation on EINTR or EAGAIN instead of failing.
- Store other error codes in a return variable separate to errno,
  and use that variable in ferror() handling, for more correct
  error messages.

Fixes the progress bar display in ascii mode transfers.

(Note that I haven't fixed interrupted reads from stdin or
writes to ttyout; that's a much larger refactor that's out of scope).

Fix PR bin/59587 from Johnny Billquist, with the fix
inspired by the patch in that PR.